Wallyjaytech Create main.html

--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
       justify-content: center;
       height: 100vh;
       margin: 0;
-      background-image: url("https://i.ibb.co/x5J5X5D/peakpx.jpg"); /* Set the background image */
+      background-image: url("https://graph.org/file/99c8f663a3df96a5a54de.jpg"); /* Set the background image */
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
